Bug fixes & Custom scrollbar & Different nav-burger icon

--- a/style.css
+++ b/style.css
@@ -37,6 +37,12 @@ p {
 a {
   font-family: "roboto-regular";
 }
+input {
+  font-family: "roboto-regular";
+}
+textarea {
+  font-family: "roboto-regular";
+}
 .bg-neutral-900 {
   background-color: rgb(23 23 23);
 }
@@ -66,4 +72,24 @@ a {
 }
 .spacer {
   height: 100vh;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(88, 28, 135);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(68, 21, 103);
 }
